# unslr

./: CMakeLists.txt  LICENSE  README.md
src/: bitstring.c  bitstring.h  compsets.c  compsets.h  extractg.c  extractg.h  findallinacc.c  findallinacc.h  grammar.h  nextitem.c  nextitem.h  optionflags.h  options.h  printgram.c  symbol.h  table.c  table.h  tableio.c  tableio.h  type.h  unslr.c  utility.c  utility.h
test/: .test_input.swp  81gram.pl  81gram.reference  test_input  test_input00  test_input01  test_input14  test_input31
